<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BYOB</string>
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="join_game">Join!</string>
    <string name="settings">Settings</string>
    <string name="game_pass_string">Game Password</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="toast_no_string_error">Please enter a valid game password!</string>
    <string name="join_game_attempt">Attempting to join game</string>
    <string name="title_activity_loading">Joining Game</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_join_game">Join Game</string>
    <string name="toast_no_connection_error">No network connection is available. Please check network connection and try again.</string>
    <string name="network_exception">Network connection failed. Please try again or contact developer.</string>
    <string name="invalid_password">An invalid password was provided. Please try again.</string>
    <string name="game_full">Game is presently full. Please try again later.</string>

</resources>
