<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".JoinGame" >


    <EditText
        android:id="@+id/gamePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:hint="@string/game_pass_string" />


    <Button
        android:id="@+id/buttonJoin"
        android:layout_width="fill_parent"
        android:layout_height="200sp"
        android:layout_below="@id/gamePass"
        android:onClick="onClick"
        android:text="@string/join_game"
        android:visibility="visible" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_below="@id/buttonJoin"
        android:onClick="onClick"
        android:text="@string/settings" />

    <requestFocus />


</RelativeLayout>
