<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ControlActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textSize="50sp"
        android:textStyle="bold"
        android:background="#000000" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

        <RelativeLayout
            android:id="@+id/directionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

                <Button
                    android:id="@+id/buttonUp"
                    android:layout_width="fill_parent"
                    android:layout_height="75sp"
                    android:text="@string/button_up" />

                <View
                    android:id="@+id/lrStrut"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_below="@id/buttonUp"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:id="@+id/buttonLeft"
                    android:layout_width="fill_parent"
                    android:layout_height="75sp"
                    android:layout_below="@id/buttonUp"
                    android:layout_toLeftOf="@id/lrStrut"
                    android:text="@string/button_left" />

                <Button
                    android:id="@+id/buttonRight"
                    android:layout_width="fill_parent"
                    android:layout_height="75sp"
                    android:layout_below="@id/buttonUp"
                    android:layout_toRightOf="@id/lrStrut"
                    android:text="@string/button_right" />

                <Button
                    android:id="@+id/buttonDown"
                    android:layout_width="fill_parent"
                    android:layout_height="75sp"
                    android:layout_below="@id/buttonLeft"
                    android:text="@string/button_down" />

        </RelativeLayout>


</FrameLayout>
